Review and edits of DA 1-10 and SA 1.16-42.

--- a/01_agama/samyukta/01/SA1_20.md
+++ b/01_agama/samyukta/01/SA1_20.md
@@ -7,50 +7,71 @@ previous: SA1_19.html
 next: SA1_21.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 20 (14). Enjoyment (2)
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一四) 味</th>
+  <th class='en'>20 (14). Enjoyment (2)</th>
+  <tr>
+    <td title='t99.2.2c11'>如是我聞： 一時，佛住舍衞國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2c12'>爾時，世尊告諸比丘： 「我昔於色味有求，有行。 若於色味隨順覺，則於色味以智慧如實見。 如是，於受⋯想⋯行⋯識味有求，有行。 若於受⋯想⋯行⋯識味隨順覺，則於識味以智慧如實見。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “In the past, I had pursued and practiced the enjoyment of form. When I realized the enjoyment of form as a result,<sup id="ref2"><a href="#n2">2</a></sup> I truly saw it with wisdom. Thus, I had pursued and practiced the enjoyment of feeling … conception … volition … awareness. When I realized the enjoyment of feeling … conception … volition … awareness as a result, I truly saw it with wisdom.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2c16'>「諸比丘，我於色患有求，有行。 若於色患隨順覺，則於色患以智慧如實見。 如是，受⋯想⋯行⋯識患有求，有行。 若於識患隨順覺，則於識患以智慧如實見。</td>
+    <td id='p3'>3. “Monks, I pursued and practiced the trouble of form. When I realized form’s trouble as a result, I truly saw it with wisdom. Thus, I pursued and practiced the trouble of feeling … conception … volition … awareness. When I realized the trouble of awareness as a result, I truly saw it with wisdom.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2c19'>「諸比丘，我於色離有求，有行。 若於色隨順覺，則於色離以智慧如實見。 如是，受⋯想⋯行⋯識離有求，有行。 若於受⋯想⋯行⋯識離隨順覺，則於受⋯想⋯行⋯識離以智慧如實見。</td>
+    <td id='p4'>4. “Monks, I pursued and practiced the escape from form. When I realized the escape from form as a result, I truly saw it with wisdom. Thus, I pursued and practiced the escape from feeling … conception … volition … awareness. When I realized the escape from awareness as a result, I truly saw it with wisdom.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2c23'>「諸比丘，我於五受陰不如實知味是味⋯患是患⋯離是離者， 我於諸天，若魔若梵，沙門婆羅門，天人衆中不脱，不離，不出，永住顛倒，不能自證得阿耨多羅三藐三菩提。</td>
+    <td id='p5'>5. “Monks, had I not truly known the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t be freed, escaped, and parted with them. I would have forever stood in delusion among gods like Māra or Brahmā,  ascetics and priests, or the assemblies of gods and humans, and I couldn’t have realized my attainment of the unsurpassed and complete awakening.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2c27'>「諸比丘，我以如實知五受陰味是味⋯患是患⋯離是離，我於諸天人若魔、若梵、沙門、婆羅門、天人衆中以脱，以離，以出，永不住顛倒。 能自證得阿耨多羅三藐三菩提。</td>
+    <td id='p6'>6. “Monks, it’s because I truly knew the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape that I was freed, escaped, parted, and liberated from bondage. I never again stood in delusion among gods like Māra or Brahmā, ascetics and priests, or the assemblies of gods and humans, and I could realize my attainment of the unsurpassed and complete awakening.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3a2'>時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td id='p7'>7. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td title='t99.2.3a4'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='t99.2.3a4'><ul class='verse'>
+    <li>過去四種説，<br/>
+    厭離及解脱，<br/>
+    二種説因縁，<br/>
+    味亦復二種。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>[11-14] The past explained in four ways,<br/>
+    [15] Disillusionment and [16] liberation,<br/>
+    [17-18] Two ways of explaining causes and conditions,<br/>
+    [19-20] And two kinds of enjoyment.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “In the past, I had pursued and practiced the enjoyment of form. When I realized the enjoyment of form as a result,[\[2\]](#n2){:#ref2} I truly saw it with wisdom. Thus, I had pursued and practiced the enjoyment of feeling … conception … volition … consciousness. When I realized the enjoyment of feeling … conception … volition … consciousness as a result, I truly saw it with wisdom.
-{:#p2}
+<hr/>
 
-3\. “Monks, I pursued and practiced the trouble of form. When I realized form’s trouble as a result, I truly saw it with wisdom. Thus, I pursued and practiced the trouble of feeling … conception … volition … consciousness. When I realized the trouble of consciousness as a result, I truly saw it with wisdom.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Monks, I pursued and practiced the escape from form. When I realized the escape from form as a result, I truly saw it with wisdom. Thus, I pursued and practiced the escape from feeling … conception … volition … consciousness. When I realized the escape from consciousness as a result, I truly saw it with wisdom.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 14 in the <cite>Taisho</cite> edition and no. 20 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002c11" target="_blank">T99.2.2c11-3a5</a>). It’s a variant of the previous one (<a href="SA1_19.html" target="_blank">SĀ 1.19</a>). Both correspond to <a href="https://suttacentral.net/sn22.26" target="_blank">SN 22.26-28</a>, with this <em>sūtra</em> being closest to <a href="https://suttacentral.net/sn22.27" target="_blank">SN 22.27</a>.[<a href="#ref1">back</a>]</li>
+<li id="n2"><em>realized … as a result</em>. Ch. 隨順覺. The parallel word in SN 22.27 is P. <em>tadajjhagama</em> (“found that”), which combines a relative pronoun with a form of P. <em>adhigacchati</em>. The C. appears to translate a different word in Prakrit that meant something like “consequently realized.” Of course, “realized” in the sense of discovering something is similar to the meaning of “found” that P. <em>adhigacchati</em> can have. I wonder if the Prakrit here might have been equiv. to <em>anugacchati</em>. It would explain the prefix 隨順, which often translated <em>anu-</em> in Indic words. While S. <em>gacchati</em> has meanings like the P. word (“to go, obtain, pass away”), it can also mean “to understand” or “perceive,” which matches 覺 much better than P. <em>adhigacchati</em>.[<a href="#ref2">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Monks, had I not truly known the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t be freed, escaped, and parted with them. I would have forever stood in delusion among gods like Māra or Brahmā,  ascetics and priests, or the assemblies of gods and humans, and I couldn’t have realized my attainment of the unsurpassed and complete awakening.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 24 February 2024</p>
 
-6\. “Monks, it’s because I truly knew the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape that I was freed, escaped, parted, and liberated from bondage. I never again stood in delusion among gods like Māra or Brahmā,  ascetics and priests, or the assemblies of gods and humans, and I could realize my attainment of the unsurpassed and complete awakening.”
-{:#p6}
-
-7\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p7}
-
-#### Summary Verse
-
-* {:.verse}[11-14] The past explained in four ways,<br/>
-[15] Disillusionment and [16] liberation,<br/>
-[17-18] Two ways of explaining causes and conditions,<br/>
-[19-20] And two kinds of enjoyment.
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is a variant of the previous one (<a href="SA1_17.html" target="_blank">SĀ 1.19</em>). Both correspond to <a href="https://suttacentral.net/sn22.26" target="_blank">SN 22.26-28</a>, with this <em>sūtra</em> being closest to <a href="https://suttacentral.net/sn22.27" target="_blank">SN 22.27</a>. [\[back\]](#ref1)
-2. {:#n1} <em>realized … as a result</em>. Ch. 隨順覺. The parallel word in SN 22.27 is P. <em>tadajjhagama</em> (“found that”), which combines a relative pronoun with a form of P. <em>adhigacchati</em>. The C. appears to translate a different word in Prakrit that meant something like “consequently realized.” Of course, “realized” in the sense of discovering something is similar to the “found” meaning that P. <em>adhigacchati</em> can have. I wonder if the Prakrit here might have been equiv. to <em>anugacchati</em>. It would explain the prefix 隨順, which sometimes translates <em>anu-</em> in Indic words. While S. <em>gacchati</em> has meanings like the P. word (“to go, obtain, pass away”), it can also mean “to understand” or “perceive,” which matches 覺 much better. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 19 December 2023
-{: .revised}
-
----
+<hr/>
