--- a/01_agama/samyukta/01/SA1_24.md
+++ b/01_agama/samyukta/01/SA1_24.md
@@ -7,54 +7,68 @@ previous: SA1_23.html
 next: SA1_25.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 24 (18). Not Another’s
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一八） 非彼</th>
+  <th class='en'>24 (18). Not Another’s</th>
+  <tr>
+    <td title='t99.2.3c28'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c29'>爾時，有異比丘從坐起。 偏袒右肩，為佛作禮，却住一面。 而白佛言： 「善哉，世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住⋯乃至⋯ 『「自知不受後有。」』」</td>
+    <td id='p2'>2. There was then a certain monk who rose from his seat. He adjusted his robes to bare his right shoulder, bowed to the Buddha, and withdrew to stand at one side. He then said to the Buddha, “It would be good, Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … ‘“I myself know that I won’t be subject to a later existence.”’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a4'>佛告比丘： 「善哉，善哉！汝作如是說： 『世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住⋯乃至⋯ 「『自知不受後有』」』⋯耶？」</td>
+    <td id='p3'>3. The Bhagavān then told that monk, “Good! It’s good that you said, ‘Bhagavān, give me a brief explanation of the Dharma. Having listened to the Dharma, I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence.’”’ [Is this what you said?]”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a7'>時，彼比丘白佛言： 「如是，世尊。」</td>
+    <td>The monk said to the Buddha, “Yes, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a7'>佛告比丘： 「諦聽！諦聽，善思念之。 當為汝說。 若非汝所應，亦非餘人所應，此法宜速除斷。 斷彼法已，以義饒益，長夜安樂。」</td>
+    <td id='p4'>4. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. If something doesn’t belong to you and it doesn’t belong to someone else, then this is something to get rid of quickly. Once you’ve gotten rid of that thing, you will be benefited by this doctrine, and you’ll find happiness for a long time.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a10'>時，彼比丘白佛言： 「知已，世尊！ 知已，善逝！」</td>
+    <td>That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a11'>佛告比丘： 「云何於我略說法中廣解其義？」</td>
+    <td id='p5'>5. The Buddha said to the monk, “How do you understand the meaning of my brief explanation of the Dharma in full?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a12'>比丘白佛言： 「世尊，色非我、非我所應、亦非餘人所應，是法宜速除斷。 斷彼法已，以義饒益，長夜安樂。 如是，受⋯想⋯行⋯識非我、非我所應、亦非餘人所應，宜速除斷。 斷彼法已，以義饒益，長夜安樂。 是故，我於如來略說法中，廣解其義。」</td>
+    <td id='p6'>6. The monk said to the Buddha, “Bhagavān, form is not self, doesn’t belong to me, and doesn’t belong to someone else, so I should get rid of this thing quickly. Having gotten rid of it, I will benefit by this doctrine, and I’ll find happiness for a long time. Thus, feeling … conception … volition … awareness is not self, doesn’t belong to me, and doesn’t belong to someone else, so I should get rid of this thing quickly. Having gotten rid of it, I will benefit by this doctrine, and I’ll find happiness for a long time. Therefore, I understand the meaning of the Bhagavān’s brief explanation of the Dharma in full.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a18'>佛告比丘： 「善哉，善哉！汝云何於我略說法中廣解其義？ 所以者何？ 比丘，色非我、非我所應、亦非餘人所應，是法宜速除斷。 斷彼法已，以義饒益，長夜安樂。 如是，受⋯想⋯行⋯識非我、非我所應、亦非餘人所應，是法宜速除斷。 斷彼法已，以義饒益，長夜安樂。」</td>
+    <td id='p7'>7. The Buddha said, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? Monk, form is not self, doesn’t belong to us, and doesn’t belong to someone else, so one should get rid of this thing quickly. Having gotten rid of it, one will benefit by this doctrine, and they’ll find happiness for a long time. Thus, feeling … conception … volition … awareness is not self, doesn’t belong to us, and doesn’t belong to someone else, so one should get rid of this thing quickly. Having gotten rid of it, one will benefit by this doctrine, and they’ll find happiness for a long time.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a24'>時，彼比丘聞佛所說，心大歡喜。 禮佛而退。 獨一靜處，精勤修習，不放逸住⋯乃至⋯ 「『自知不受後有。』」</td>
+    <td id='p8'>8. When that monk heard what the Buddha taught, he felt great joy. He then bowed to the Buddha and withdrew. He went alone to a quiet place where he diligently trained and lived earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence.’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a26'>時，彼比丘心得解脫，成阿羅漢。</td>
+    <td id='p9'>9. That monk’s mind was liberated, and he became an <em>arhat</em>.</td>
+  </tr>
+</table>
 
-2\. There was then a certain monk who rose from his seat. He adjusted his robes to bare his right shoulder, bowed to the Buddha, and withdrew to stand at one side. He then said to the Buddha, “It would be good, Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … ‘“I myself know that I won’t be subject to a later existence.”’”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then told that monk, “Good, good! Did you say, ‘Bhagavān, give me a brief explanation of the Dharma. Having listened to the Dharma, I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence’”’? [Is this what you said?]”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-The monk said to the Buddha, “Yes, Bhagavān.”
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 18 in the <cite>Taisho</cite> edition and no. 24 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0003c28" target="_blank">T99.2.3c28-4b27</a>). It’s a variant of the previous <em>sūtra</em> (<a href="SA1_23.html" target="_blank">SĀ 1.23</a>), and it has a close parallel in Pali at <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. The next two <em>sūtra</em>s are variants that substitute different principles for the monk to contemplate. See <a href="SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 February 2024</p>
 
-4\. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. If something doesn’t belong to you and it doesn’t belong to someone else, then this is something to get rid of quickly. Once you’ve gotten rid of that thing, you will be benefited by this doctrine, and you’ll find happiness for a long time.”
-{:#p4}
-
-That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”
-
-
-5\. The Buddha said to the monk, “How do you understand the meaning of my brief explanation of the Dharma in full?”
-{:#p5}
-
-6\. The monk said to the Buddha, “Bhagavān, form is not self, doesn’t belong to me, and doesn’t belong to someone else, so I should get rid of this thing quickly. Having gotten rid of it, I will benefit by this doctrine, and I’ll find happiness for a long time. Thus, feeling … conception … volition … consciousness is not self, doesn’t belong to me, and doesn’t belong to someone else, so I should get rid of this thing quickly. Having gotten rid of it, I will benefit by this doctrine, and I’ll find happiness for a long time. Therefore, I understand the meaning of the Bhagavān’s brief explanation of the Dharma in full.”
-{:#p6}
-
-7\. The Buddha said, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? Monk, form is not self, doesn’t belong to us, and doesn’t belong to someone else, so one should get rid of this thing quickly. Having gotten rid of it, one will benefit by this doctrine, and they’ll find happiness for a long time. Thus, feeling … conception … volition … consciousness is not self, doesn’t belong to us, and doesn’t belong to someone else, so one should get rid of this thing quickly. Having gotten rid of it, one will benefit by this doctrine, and they’ll find happiness for a long time.”
-{:#p7}
-
-8\. When that monk heard what the Buddha taught, he felt great joy. He then bowed to the Buddha and withdrew. He went alone to a quiet place where he diligently trained and lived earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence.’”
-{:#p8}
-
-9\. That monk’s mind was liberated, and he became an <em>arhat</em>.
-{:#p9}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is a variant of the previous one (<a href="SA1_23.html" target="_blank">SĀ 1.23</a>), and it has a close parallel in Pali at <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. The next two <em>sūtra</em>s are variants that substitute different principles for the monk to contemplate. See <a href="SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 19 December 2023
-{: .revised}
-
----
+<hr/>
