--- a/01_agama/samyukta/01/SA1_25.md
+++ b/01_agama/samyukta/01/SA1_25.md
@@ -7,51 +7,64 @@ previous: SA1_24.html
 next: SA1_26.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 25 (19). Tying Bonds
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一九） 結繫</th>
+  <th class='en'>25 (19). Tying Bonds</th>
+  <tr>
+    <td title='t99.2.4a28'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4a29'>爾時，有異比丘從座起⋯ 為佛作禮⋯。 而白佛言： 「⋯世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住。 不放逸住已，思惟： 『所以善男子正信家非家出家⋯乃至⋯自知不受後有。』」</td>
+    <td id='p2'>2. There was then a certain monk who rose from his seat. [He adjusted his robes to bare his right shoulder,] bowed to the Buddha, [and withdrew to stand at one side]. He then said to the Buddha, “[It would be good,] Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly. Having lived earnestly, I’ll then think, “A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home … <em>up to</em> … ‘“I myself know that I won’t be subject to a later existence.”’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4b4'>爾時，世尊告彼比丘： 「善哉，善哉！汝今作是說： 『善哉，世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住⋯乃至⋯ 「『自知不受後有』」』⋯耶？」</td>
+    <td id='p3'>3. The Bhagavān then told that monk, “Good! It’s good that you said, ‘It would be good, Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence.’”’ [Is this what you said?]”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4b7'>比丘白佛言： 「如是，世尊。」</td>
+    <td>The monk said to the Buddha, “Yes, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4b8'>佛告比丘： 「諦聽！諦聽，善思念之。 當為汝說。 比丘，結所繫法宜速除斷。 斷彼法已，以義饒益，長夜安樂。」</td>
+    <td id='p4'>4. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, one should quickly get rid of something that’s a tying bond. Once one gets rid of that, they will be benefited by this doctrine, and they’ll find happiness for a long time.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4b10'>時，彼比丘白佛言： 「知已，世尊！ 知已，善逝！」</td>
+    <td>That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4b11'>佛告比丘： 「汝云何於我略說法中廣解其義？」</td>
+    <td id='p5'>5. The Buddha said to the monk, “How do you understand the meaning of my brief explanation of the Dharma in full?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4b12'>比丘白佛言： 「世尊！色是結所繫法。 是結所繫法宜速除斷。 斷彼法已，以義饒益，長夜安樂。 如是，受⋯想⋯行⋯識結所繫法。 是結所繫法宜速除斷。 斷彼法已，以義饒益，長夜安樂。 是故，我於世尊略說法中，廣解其義。」</td>
+    <td id='p6'>6. The monk said to the Buddha, “Bhagavān, form is something that’s a tying bond. I should quickly get rid of something that’s a tying bond. Having gotten rid of it, I will benefit by this doctrine, and I’ll find happiness for a long time. Thus, feeling … conception … volition … awareness is something that’s a tying bond. I should quickly get rid of something that’s a tying bond. Having gotten rid of it, I will benefit by this doctrine, and I’ll find happiness for a long time. Therefore, I understand the meaning of the Bhagavān’s brief explanation of the Dharma in full.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4b17'>佛告比丘： 「善哉！善哉，汝於我略說法中廣解其義。 所以者何？ 色是結所繫法。 此法宜速除斷。 斷彼法已，以義饒益，長夜安樂。 如是，受⋯想⋯行⋯識是結所繫法。 此法宜速除斷。 斷彼法已，以義饒益，長夜安樂。」</td>
+    <td id='p7'>7. The Buddha said, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? Form is something that’s a tying bond. One should quickly get rid of something that’s a tying bond. Having gotten rid of it, they will benefit by this doctrine, and they’ll find happiness for a long time. Feeling … conception … volition … awareness is something that’s a tying bond. One should quickly get rid of something that’s a tying bond. Having gotten rid of it, they will benefit from this doctrine, and they’ll find happiness for a long time.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4b22'>時，彼比丘聞佛所說，心大歡喜。 禮佛而退。 獨一靜處，專精思惟，不放逸住⋯乃至⋯ 心得解脫，成阿羅漢。</td>
+    <td id='p8'>8. When that monk heard what the Buddha taught, he felt great joy. He then bowed to the Buddha and withdrew. He went alone to a quiet place where he diligently trained and lived earnestly … <em>up to</em> … [That monk’s] mind was liberated, and he became an <em>arhat</em>.</td>
+  </tr>
+</table>
 
-2\. There was then a certain monk who rose from his seat. [He adjusted his robes to bare his right shoulder,] bowed to the Buddha, [and withdrew to stand at one side]. He then said to the Buddha, “[It would be good,] Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly. Having lived earnestly, I’ll then think, “A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home … <em>up to</em> … ‘“I myself know that I won’t be subject to a later existence.”’”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān then told that monk, “Good, good! Did you say, ‘It would be good, Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence’”’? [Is this what you said?]”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-The monk said to the Buddha, “Yes, Bhagavān.”
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 19 in the <cite>Taisho</cite> edition and no. 25 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0004a28" target="_blank">T99.2.4a28-b24</a>). It’s a variant of <a href="SA1_23.html" target="_blank">SĀ 1.23</a>, and it has a parallel in Pali at <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> follows the same template but includes a simile not found here. It’s also similar to <a href="https://suttacentral.net/sn22.65" target="_blank">SN 22.65</a>, but that <em>sutta</em> adds Māra and delighting in the five aggregates to the advice given. The next and previous two <em>sūtra</em>s are variants that substitute different principles for the monk to contemplate. See <a href="SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 February 2024</p>
 
-4\. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, one should quickly get rid of something that’s a tying bond. Once one gets rid of that, they will be benefited by this doctrine, and they’ll find happiness for a long time.”
-{:#p4}
-
-That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”
-
-
-5\. The Buddha said to the monk, “How do you understand the meaning of my brief explanation of the Dharma in full?”
-{:#p5}
-
-6\. The monk said to the Buddha, “Bhagavān, form is something that’s a tying bond. I should quickly get rid of something that’s a tying bond. Having gotten rid of it, I will benefit by this doctrine, and I’ll find happiness for a long time. Thus, feeling … conception … volition … consciousness is something that’s a tying bond. I should quickly get rid of something that’s a tying bond. Having gotten rid of it, I will benefit by this doctrine, and I’ll find happiness for a long time. Therefore, I understand the meaning of the Bhagavān’s brief explanation of the Dharma in full.”
-{:#p6}
-
-7\. The Buddha said, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? Form is something that’s a tying bond. One should quickly get rid of something that’s a tying bond. Having gotten rid of it, they will benefit by this doctrine, and they’ll find happiness for a long time. Feeling … conception … volition … consciousness is something that’s a tying bond. One should quickly get rid of something that’s a tying bond. Having gotten rid of it, they will benefit from this doctrine, and they’ll find happiness for a long time.”
-{:#p7}
-
-8\. When that monk heard what the Buddha taught, he felt great joy. He then bowed to the Buddha and withdrew. He went alone to a quiet place where he diligently trained and lived earnestly … <em>up to</em> … [That monk’s] mind was liberated, and he became an <em>arhat</em>.
-{:#p8}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is a variant of <a href="SA1_23.html" target="_blank">SĀ 1.23</a>, and it has a parallel in Pali at <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. It’s also similar to <a href="https://suttacentral.net/sn22.65" target="_blank">SN 22.65</a>, but that <em>sutta</em> adds Māra and delighting in the five aggregates to the advice given. The next and previous two <em>sūtra</em>s are variants that substitute different principles for the monk to contemplate. See <a href="SA1_23.html" target="_blank">SĀ 1.23</a> for the full passages that were abbreviated here. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 2 February 2024
-{: .revised}
-
----
+<hr/>
