--- a/01_agama/samyukta/01/SA1_42.md
+++ b/01_agama/samyukta/01/SA1_42.md
@@ -7,66 +7,84 @@ previous: SA1_41.html
 next: SA1_43.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 42 (259). Direct Realization
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, the Venerable Śāriputra and Mahākauṣṭhila were on Mount Gṛdhrakūṭa.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（二五九） 無間等</th>
+  <th class='en'>42 (259). Direct Realization</th>
+  <tr>
+    <td title='t99.2.65b5'>如是我聞：一時，佛住王舍城迦蘭陀竹園。爾時，尊者舍利弗共摩訶拘絺羅在耆闍崛山。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, the Venerable Śāriputra and Mahākauṣṭhila were on Mount Gṛdhrakūṭa.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b7'>摩訶拘絺羅晡時從禪起，詣舍利弗所，共相問訊，相娛悅已，却坐一面。</td>
+    <td id='p2'>2. Venerable Mahākauṣṭhila rose from meditation in the afternoon and visited Śāriputra. Once they had exchanged greetings and joked in various ways, he withdrew to sit to one side.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b8'>時，摩訶拘絺羅語舍利弗：「欲有所問，仁者寧有閑暇見答以不？」</td>
+    <td id='p3'>3. Mahākauṣṭhila then said to Śāriputra, “I have a question I’d like to ask if you might have some time to explain it for me?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b10'>舍利弗言：「仁者且問，知者當答。」</td>
+    <td>Śāriputra said, “Sir, you may ask your question. I will answer with that I know.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b11'>時，摩訶拘絺羅問舍利弗言：「若比丘未得無間等法，欲求無間等法，云何方便求？思惟何等法？」</td>
+    <td id='p4'>4. Mahākauṣṭhila then asked Śāriputra, “If a monk who has yet to directly realize the Dharma wishes to pursue that direct realization, what method does he use to do that? What teaching does he contemplate?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b13'>舍利弗言：「若比丘未得無間等法，欲求無間等法，精勤思惟：『五受陰為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰精勤思惟，得須陀洹果證。」</td>
+    <td id='p5'>5. Śāriputra replied, “A monk who has yet to directly realize the Dharma and wants to pursue that realization diligently contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates the five acquired aggregates, he’ll realize the fruit of stream entry.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b17'>又問：「舍利弗！得須陀洹果證已，欲得斯陀含果證者，當思惟何等法？」</td>
+    <td id='p6'>6. Mahākauṣṭhila also asked, “Śāriputra, suppose he wants to realize the fruit of once-returning after realizing the fruit of stream entry. What teaching will he contemplate?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b19'>舍利弗言：「拘絺羅！已得須陀洹果證已，欲得斯陀含果證者，亦當精勤思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰精勤思惟，得斯陀含果證。」</td>
+    <td id='p7'>7. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of once-returning after realizing the fruit of stream entry should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of once-returning.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b24'>摩訶拘絺羅又問舍利弗言：「得斯陀含果證已，欲得阿那含果證者，當思惟何等法？」</td>
+    <td id='p8'>8. Mahākauṣṭhila asked Śāriputra, “Suppose he wants to realize the fruit of non-returning after realizing the fruit of once-returning. What teaching will he contemplate?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b26'>舍利弗言：「拘絺羅！得斯陀含果證已，欲得阿那含果證者，當復精勤思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰精勤思惟，得阿那含果證。」</td>
+    <td id='p9'>9. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of non-returning after realizing the fruit of once-returning will also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of non-returning.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65c1'>[>摩訶拘絺羅又問舍利弗言：「得阿那含果證已，欲得阿羅漢果證者，當思惟何等法？」]</td>
+    <td id='p10'>10. Mahākauṣṭhila asked Śāriputra, “Suppose he wants to realize the fruit of the <em>arhat</em> after realizing the fruit of non-returning. What teaching will he contemplate?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65c1'>[>舍利弗言：「拘絺羅！得阿那含果證]已，欲得阿羅漢果證者，當復精勤思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？是所應處故。若比丘於此五受陰法精勤思惟，得阿羅漢果證。」</td>
+    <td id='p11'>11. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of the <em>arhat</em> after realizing the fruit of non-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of the <em>arhat</em>.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65c5'>摩訶拘絺羅又問舍利弗：「得阿羅漢果證已，復思惟何等法？」</td>
+    <td id='p12'>12. Mahākauṣṭhila asked Śāriputra, “What teaching does he contemplate after attaining the fruit of the <em>arhat</em>?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65c7'>舍利弗言：「摩訶拘絺羅！阿羅漢亦復思惟：『此五受陰法為病、為癰、為刺、為殺、無常、苦、空、非我。』所以者何？為得未得故，證未證故，見法樂住故。」</td>
+    <td id='p13'>13. Śāriputra replied, “Mahākauṣṭhila, an <em>arhat</em> also contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because he has attained what he had yet to attain, realized what he had yet to realize, and he lives happily in this life.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65c10'>時，二正士各聞所說，歡喜而去。</td>
+    <td id='p14'>14. When those two upright men each heard what was taught, they rejoiced and departed.</td>
+  </tr>
+</table>
 
-2\. Venerable Mahākauṣṭhila rose from meditation in the afternoon and visited Śāriputra. Once they had exchanged greetings and joked in various ways, he withdrew to sit to one side.
-{:#p2}
+<hr/>
 
-3\. Mahākauṣṭhila then said to Śāriputra, “I have a question I’d like to ask if you might have some time to explain it for me?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-Śāriputra said, “Sir, you may ask your question. I will answer with that I know.”
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 259 in the <cite>Taisho</cite> edition and no. 42 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0065b05" target="_blank">T99.2.65b5-c11</a>). It’s similar to <a href="https://suttacentral.net/sn22.122" target="_blank">SN 22.122-123</a> and <a href="https://suttacentral.net/ea34.1" target="_blank">EĀ 34.1</a>. The version in EĀ matches the Pali parallel in that “direct realization” isn’t mentioned. Instead, the initial question is about an “ethical” monk.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 1 March 2024</p>
 
-4\. Mahākauṣṭhila then asked Śāriputra, “If a monk who has yet to directly realize the Dharma wishes to pursue that direct realization, what method does he use to do that? What teaching does he contemplate?”
-{:#p4}
-
-5\. Śāriputra replied, “A monk who has yet to directly realize the Dharma and wants to pursue that realization diligently contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates the five acquired aggregates, he’ll realize the fruit of stream entry.”
-{:#p5}
-
-6\. Mahākauṣṭhila also asked, “Śāriputra, suppose he wants to realize the fruit of once-returning after realizing the fruit of stream entry. What teaching will he contemplate?”
-{:#p6}
-
-7\. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of once-returning after realizing the fruit of stream entry should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of once-returning.”
-{:#p7}
-
-8\. Mahākauṣṭhila asked Śāriputra, “Suppose he wants to realize the fruit of non-returning after realizing the fruit of once-returning. What teaching will he contemplate?”
-{:#p8}
-
-9\. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of non-returning after realizing the fruit of once-returning will also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of non-returning.”
-{:#p9}
-
-10\. Mahākauṣṭhila asked Śāriputra, “Suppose he wants to realize the fruit of the <em>arhat</em> after realizing the fruit of non-returning. What teaching will he contemplate?”
-{:#p10}
-
-11\. Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of the <em>arhat</em> after realizing the fruit of non-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of the <em>arhat</em>.”
-{:#p11}
-
-12\. Mahākauṣṭhila asked Śāriputra, “What teaching does he contemplate after attaining the fruit of the <em>arhat</em>?”
-{:#p12}
-
-13\. Śāriputra replied, “Mahākauṣṭhila, an <em>arhat</em> also contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because he has attained what he had yet to attain, realized what he had yet to realize, and he lives happily in this life.”
-{:#p13}
-
-14\. When those two upright men each heard what was taught, they rejoiced and departed.
-{:#p14}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is similar to <a href="https://suttacentral.net/sn22.122" target="_blank">SN 22.122-123</a> and EĀ 34.1. The version in EĀ matches the Pali parallel in that “direct realization” isn’t mentioned. Instead, the initial question is about an “ethical” monk. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 December 2023
-{: .revised}
-
----
+<hr/>
