--- a/01_agama/samyukta/01/SA1_17.md
+++ b/01_agama/samyukta/01/SA1_17.md
@@ -7,37 +7,45 @@ previous: SA1_16.html
 next: SA1_18.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 17 (11). Causes and Conditions
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一一） 説因縁</th>
+  <th class='en'>17 (11) Causes and Conditions</th>
+  <tr>
+    <td title='t99.2.2a21'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2a22'>爾時，世尊告諸比丘： 「色無常。 若因若緣生諸色者，彼亦無常。 無常因、無常緣所生諸色，云何有常？ 如是，受⋯想⋯行⋯識無常。 若因若緣生諸識者，彼亦無常。 無常因無常緣所生諸識，云何有常？</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes and conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Thus, feeling … conception … volition … awareness is impermanent. Whatever causes and conditions give rise to instances of awareness, they are also impermanent. How could instances of awareness that arise from impermanent causes and conditions be permanent?</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2a26'>如是，諸比丘，色無常。 受⋯想⋯行⋯識無常。 無常者則是苦，苦者則非我，非我者則非我所。</td>
+    <td id='p3'>3. “Thus, monks, form is impermanent. Feeling … conception … volition … awareness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2a21'>「聖弟子如是觀者厭於色⋯ 厭於受⋯想⋯行⋯識。 厭者不樂。 不樂則解脫。 解脫知見： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
+    <td id='p4'>4. “Noble disciples who observe it in this way become disillusioned with form … become disillusioned with feeling … conception … volition … awareness. Being disillusioned, they don’t enjoy it. Not enjoying it, they are liberated. Being liberated, they know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2b2'>時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p5'>5. When the monks who heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes and conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Thus, feeling … conception … volition … consciousness is impermanent. Whatever causes and conditions give rise to consciousnesses, they are also impermanent. How could consciousnesses that arise from impermanent causes and conditions be permanent?
-{:#p2}
+<hr/>
 
-3\. “Thus, monks, form is impermanent. Feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Noble disciples who observe it in this way become disillusioned with form … become disillusioned with feeling … conception … volition … consciousness. Being disillusioned, they don’t enjoy it. Not enjoying it, they are liberated. Being liberated, they know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 11 in the <cite>Taisho</cite> edition and no. 17 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002a21" target="_blank">T99.2.2a21-b3</a>). It’s parallel with <a href="https://suttacentral.net/sn22.18" target="_blank">SN 22.18</a> and similar to <a href="https://suttacentral.net/sn22.19" target="_blank">SN 22.19-20</a>. SN 22.18-20 take up each of the three negative aspects of conditioned things and apply them also to the causes and conditions that give rise to conditioned things.<br/>
+Here, both SĀ 1.17-18 do the same only regarding the impermanence of conditioned things. They then restate the argument that something impermanent is painful, not self, and doesn’t belong to self (which isn’t included in SN 22.18-20). As with <a href="SA1_15.html" target="_blank">SĀ 1.15-16</a>, these two <em>sūtra</em>s differ only in describing the noble disciple’s liberation in two equivalent ways. Thus, we could group all five <em>sūtra</em>s (i.e., SN 22.18-20 and SĀ 1.17-18) together as part of a larger set of variants.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-5\. When the monks who heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 24 February 2024</p>
 
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.18" target="_blank">SN 22.18</a> and similar to <a href="https://suttacentral.net/sn22.19" target="_blank">SN 22.19-20</a>. SN 22.18-20 take up each of the three negative aspects of conditioned things and apply them also to the causes and conditions that give rise to conditioned things.<br/>
-Here, both SĀ 1.17-18 do the same only regarding the impermanence of conditioned things. They then restate the argument that something impermanent is painful, not self, and doesn’t belong to self (which isn’t included in SN 22.18-20). As with <a href="SA1_15.html" target="_blank">SĀ 1.15-16</a>, these two <em>sūtra</em>s differ only in describing the noble disciple’s liberation in two equivalent ways. Thus, we could group all five <em>sūtra</em>s (i.e., SN 22.18-20 and SĀ 1.17-18) together as part of a larger set of variants. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 19 December 2023
-{: .revised}
-
----
+<hr/>
