--- a/01_agama/samyukta/01/SA1_18.md
+++ b/01_agama/samyukta/01/SA1_18.md
@@ -7,36 +7,44 @@ previous: SA1_17.html
 next: SA1_19.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 18 (12). Causes and Conditions (2)
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一二） 説因縁</th>
+  <th class='en'>18 (12). Cause and Condition (2)</th>
+  <tr>
+    <td title='t99.2.2b4'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2b5'>爾時，世尊告諸比丘： 「色無常。 若因若緣生諸色者，彼亦無常。 無常因無常緣所生諸色，云何有常？ 受⋯想⋯行⋯識無常。 若因若緣生諸識者，彼亦無常。 無常因無常緣所生諸識，云何有常？</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes and conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Thus, feeling … conception … volition … awareness is impermanent. Whatever causes and conditions give rise to instances of awareness, they are also impermanent. How could instances of awareness that arise from impermanent causes and conditions be permanent?</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2b9'>「如是，比丘，色無常。 受⋯想⋯行⋯識無常。 無常者則是苦，苦者則非我，非我者則非我所。 如是觀者名真實觀。</td>
+    <td id='p3'>3. “Thus, monks, form is impermanent. Feeling … conception … volition … awareness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self. Observing in this way is called true observation.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2b12'>聖弟子如是觀者於色解脫，於受⋯想⋯行⋯識解脫。 我說是等為解脫生，老，病，死，憂，悲，苦，惱。」</td>
+    <td id='p4'>4. “Noble disciples who observe it in this way are liberated from form …  liberated from feeling … conception … volition … awareness. I say that this is liberation from birth, old age, illness, death, grief, sorrow, pain, and trouble.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2b14'>時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes and conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Thus, feeling … conception … volition … consciousness is impermanent. Whatever causes and conditions give rise to consciousnesses, they are also impermanent. How could consciousnesses that arise from impermanent causes and conditions be permanent?
-{:#p2}
+<hr/>
 
-3\. “Thus, monks, form is impermanent. Feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self. Observing in this way is called true observation.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Noble disciples who observe it in this way are liberated from form …  liberated from feeling … conception … volition … consciousness. I say that this is liberation from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 12 in the <cite>Taisho</cite> edition and no. 18 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002b04" target="_blank">T99.2.2b4-14</a>). It’s a variant of <a href="SA1_17.html" target="_blank">SĀ 1.17</a>. Both are parallel with <a href="https://suttacentral.net/sn22.18" target="_blank">SN 22.18</a> and similar to <a href="https://suttacentral.net/sn22.19" target="_blank">SN 22.19-20</a>. See the notes to SĀ 1.17 for more discussion of these parallels.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 24 February 2024</p>
 
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is a variant of <a href="SA1_17.html" target="_blank">SĀ 1.17</a>. Both are parallel with <a href="https://suttacentral.net/sn22.18" target="_blank">SN 22.18</a> and similar to <a href="https://suttacentral.net/sn22.19" target="_blank">SN 22.19-20</a>. See the notes to SĀ 1.17 for more discussion of these parallels. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 19 December 2023
-{: .revised}
-
----
+<hr/>
