--- a/01_agama/samyukta/01/SA1_23.md
+++ b/01_agama/samyukta/01/SA1_23.md
@@ -7,54 +7,68 @@ previous: SA1_22.html
 next: SA1_24.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 23 (17). Not Mine
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一七） 非我</th>
+  <th class='en'>23 (17). Not Mine</th>
+  <tr>
+    <td title='t99.2.3b28'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3b29'>有異比丘從坐起。 偏袒右肩，合掌白佛言： 「善哉，世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，住不放逸： 『所以善男子出家，剃除鬚髮，身著法服，信家非家，出家學道。 為究竟無上梵行。 現法身作證： 「我生已盡，梵行已立，所作已作。 自知不受後有。」』」</td>
+    <td id='p2'>2. There was then a certain monk who rose from his seat. He adjusted his robes to bare his right shoulder and saluted the Buddha with his palms together. He said, “It would be good, Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly. [I’ll then think:] ‘A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home to train on the path. That’s the way he reaches the ultimate and unsurpassed religious life. He’ll personally realize in the present life: “My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c6'>爾時，世尊告彼比丘： 「善哉，善哉！汝作是說： 『世尊，為我略說法要。 我於略說法中廣解其義。 當獨一靜處，專精思惟，住不放逸⋯乃至⋯ 「『自知不受後有。』」』 汝如是說耶？」</td>
+    <td id='p3'>3. The Bhagavān told that monk, “Good! It’s good that you said, ‘Bhagavān, give me a brief explanation of the Dharma. From that brief explanation of the Dharma, I will get a full understanding of its meaning. I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence.’”’ Is this what you said?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c9'>比丘白佛： 「如是，世尊。」</td>
+    <td>The monk said to the Buddha, “Yes, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c10'>佛告比丘： 「諦聽！諦聽，善思念之。 當為汝說。 比丘，非汝所應之法，宜速斷除。 斷彼法者，以義饒益，長夜安樂。」</td>
+    <td id='p4'>4. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, you should quickly get rid of something that doesn’t belong to you. Someone who gets rid of that thing will be benefited by this doctrine, and they’ll find happiness for a long time.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c13'>時，彼比丘白佛言： 「知已，世尊！ 知已，善逝！」</td>
+    <td>That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c14'>佛告比丘： 「云何於我略說法中廣解其義？」</td>
+    <td id='p5'>5. The Buddha said to the monk, “How do you understand the meaning of my brief explanation of the Dharma in full?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c15'>比丘白佛言： 「世尊，色非我所應，宜速斷除⋯ 受⋯想⋯行⋯識非我所應，宜速斷除。 以義饒益，長夜安樂。 是故，世尊，我於世尊略說法中廣解其義。」</td>
+    <td id='p6'>6. The monk said to the Buddha, “Bhagavān, form doesn’t belong to me, so I should get rid of it quickly. [Having gotten rid of it, I will be benefited by this doctrine, and I’ll find happiness for a long time.] Feeling … conception … volition … awareness doesn’t belong to me, so I should get rid of it quickly. [Having gotten rid of it,] I will be benefited by this doctrine, and I’ll find happiness for a long time. Therefore, Bhagavān, I understand the meaning of the Bhagavān’s brief explanation of the Dharma in full.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c18'>佛言： 「善哉！善哉，比丘，汝於我略說法中廣解其義。 所以者何？ 色者非汝所應，宜速斷除⋯ 如是，受⋯想⋯行⋯識非汝所應，宜速斷除。 斷除已，以義饒益，長夜安樂。」</td>
+    <td id='p7'>7. The Buddha said, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? Form doesn’t belong to you, so you should get rid of it quickly. [Having gotten rid of it, you will be benefited by this doctrine, and you’ll find happiness for a long time.] Thus, feeling … conception … volition … awareness doesn’t belong to you, so you should get rid of it quickly. [Having gotten rid of it,] you will be benefited by this doctrine, and you’ll find happiness for a long time.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c22'>時，彼比丘聞佛所說，心大歡喜。 禮佛而退。 獨一靜處，精勤修習，住不放逸。 精勤修習，住不放逸已，思惟： 「所以善男子出家，剃除鬚髮，身著法服，正信非家出家⋯乃至⋯ 『自知不受後有。』」</td>
+    <td id='p8'>8. When that monk heard what the Buddha taught, he felt great joy. He bowed to the Buddha and withdrew. He then went alone to a quiet place where he diligently trained and lived earnestly. After diligently training and living earnestly, he thought, “A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home … <em>up to</em> … ‘I myself know that I won’t be subject to a later existence.’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.3c26'>時，彼比丘成阿羅漢，心得解脫。</td>
+    <td id='p9'>9. That monk then became an <em>arhat</em>, and his mind was liberated.</td>
+  </tr>
+</table>
 
-2\. There was then a certain monk who rose from his seat. He adjusted his robes to bare his right shoulder, and saluted the Buddha with his palms together. He said, “It would be good, Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly. [I’ll then think:] ‘A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home to train on the path. That’s the way he reaches the ultimate and unsurpassed religious life. He’ll personally realize in the present life: “My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”’”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān told that monk, “Good, good! Did you say, ‘Bhagavān, give me a brief explanation of the Dharma. From that brief explanation of the Dharma, I will get a full understanding of its meaning. I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence’”’? Is this what you said?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-The monk said to the Buddha, “Yes, Bhagavān.”
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 17 in the <cite>Taisho</cite> edition and no. 23 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0003b28" target="_blank">T99.2.3b28-c27</a>). Its closest parallel appears to be <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>, but this Pali <em>sutta</em> does not include a backstory or a monk who comes to ask the Buddha for a Dharma teaching. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> follows the same template but includes a simile not found here. It’s also similar to <a href="https://suttacentral.net/sn22.69" target="_blank">SN 22.69</a>, which recommends abandoning what doesn’t belong to oneself. The next three <em>sūtra</em>s (<a href="SA1_24.html" target="_blank">SĀ 1.24-26</a>) are variants that substitute different principles for the monk to contemplate.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 February 2024</p>
 
-4\. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, you should quickly get rid of something that doesn’t belong to you. Someone who gets rid of that thing will be benefited by this doctrine, and they’ll find happiness for a long time.”
-{:#p4}
-
-That monk then said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”
-
-
-5\. The Buddha said to the monk, “How do you understand the meaning of my brief explanation of the Dharma in full?”
-{:#p5}
-
-6\. The monk said to the Buddha, “Bhagavān, form doesn’t belong to me, so I should get rid of it quickly. [Having gotten rid of it, I will be benefited by this doctrine, and I’ll find happiness for a long time.] Feeling … conception … volition … consciousness doesn’t belong to me, so I should get rid of it quickly. [Having gotten rid of it,] I will be benefited by this doctrine, and I’ll find happiness for a long time. Therefore, Bhagavān, I understand the meaning of the Bhagavān’s brief explanation of the Dharma in full.”
-{:#p6}
-
-7\. The Buddha said, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? Form doesn’t belong to you, so you should get rid of it quickly. [Having gotten rid of it, you will be benefited by this doctrine, and you’ll find happiness for a long time.] Thus, feeling … conception … volition … consciousness doesn’t belong to you, so you should get rid of it quickly. [Having gotten rid of it,] you will be benefited by this doctrine, and you’ll find happiness for a long time.”
-{:#p7}
-
-8\. When that monk heard what the Buddha taught, he felt great joy. He bowed to the Buddha and withdrew. He then went alone to a quiet place where he diligently trained and lived earnestly. After diligently training and living earnestly, he thought, “A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home … <em>up to</em> … ‘I myself know that I won’t be subject to a later existence.’”
-{:#p8}
-
-9\. That monk then became an <em>arhat</em>, and his mind was liberated.
-{:#p9}
-
----
-
-### Notes
-
-1. {:#n1} The closest parallel for this <em>sūtra</em> appears to be <a href="https://suttacentral.net/sn22.34" target="_blank">SN 22.34</a>, but it does not include the a backstory or a monk who comes to ask the Buddha for a Dharma teaching. <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a> uses the same template but includes a simile not found here. It’s also very close to <a href="https://suttacentral.net/sn22.69" target="_blank">SN 22.69</a>, which recommends abandoning what doesn’t belong to self. The next three <em>sūtra</em>s (<a href="SA1_24.html" target="_blank">SĀ 1.24-26</a>) are variants that substitute different principles for the monk to contemplate. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 19 December 2023
-{: .revised}
-
----
+<hr/>
