--- a/01_agama/samyukta/01/SA1_26.md
+++ b/01_agama/samyukta/01/SA1_26.md
@@ -7,24 +7,28 @@ previous: SA1_25.html
 next: SA1_27.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 26 (20). What Affects
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-<em>A sūtra about being affected[\[1\]](#n1){:#ref1} was taught in the same way [as the <a href="SA1_25.html" target="_blank">previous sūtra</a>].</em>
-{:#p1}
+<table class="trans">
+  <th class='ch'>（二〇） 染</th>
+  <th class='en'>26 (20). What Affects</th>
+  <tr>
+    <td title='t99.2.4b25'>深經亦如是說。</td>
+    <td id='p1'>1. A <em>sūtra</em> about being affected<sup id="ref1"><a href="#n1">1</a></sup> was taught in the same way [as the <a href="SA1_25.html" target="_blank">previous <em>sūtra</em></a>].</td>
+  </tr>
+</table>
 
----
+<hr/>
 
-### Notes
+<h3 id="notes">Notes</h3>
 
-1. {:#n1} The <cite>Taisho</cite> reads: “a profound <em>sūtra</em>” (深經). Both Yinshun and CBETA amend this to “a <em>sūtra</em> about being affected” (染經), assuming that 深 is a typo for 染. If that’s true (and I don’t see any better suggestion to make sense of it), then this would have been a variant of the previous three <em>sūtra</em>s that substituted “something affecting” as the thing to get rid of. [\[back\]](#ref1)
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 20 in the <cite>Taisho</cite> edition and no. 26 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0004b25" target="_blank">T99.2.4b25</a>). It’s actually a variant note to the previous <em>sūtra</em> that was numbered in the <cite>Taisho</cite>. The <cite>Taisho</cite> here reads “a profound <em>sūtra</em>” (深經), but both Yinshun and CBETA amend this to “a <em>sūtra</em> about being affected” (染經), assuming that 深 is a typo for 染. If that’s true (and I don’t see any better suggestion to make sense of it), then this would have been a variant of the previous three <em>sūtra</em>s that substituted “something affecting” as the thing to get rid of.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 February 2024</p>
 
-Translator: Charles Patton
-{: .translator}
-Last Revised: 20 December 2023
-{: .revised}
-
----
+<hr/>
