--- a/01_agama/samyukta/01/SA1_28.md
+++ b/01_agama/samyukta/01/SA1_28.md
@@ -7,43 +7,53 @@ previous: SA1_27.html
 next: SA1_29.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 28 (22). Kappa’s Question
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（二二） 劫波所問</th>
+  <th class='en'>28 (22). Kappa’s Question</th>
+  <tr>
+    <td title='t99.2.4c20'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4c21'>爾時，有比丘名劫波來詣佛所。 頭面禮足，却住一面，白佛言： 「如世尊說『比丘心得善解脫。』 世尊，云何比丘心得善解脫？」</td>
+    <td id='p2'>2. It was then that the monk Kappa<sup id="ref2"><a href="#n2">2</a></sup> came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand at one side. he said to the Buddha, “The Bhagavān says ‘a monk’s mind becomes well liberated.’  Bhagavān, how does a monk’s mind become well liberated?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4c24'>爾時，世尊告劫波曰： 「善哉！善哉能問如來心善解脫。 善哉，劫波！諦聽！諦聽，善思念之。 當為汝說。</td>
+    <td id='p3'>3. The Bhagavān told Kappa, “Good! It’s good that you can ask the Tathāgata about one’s mind being well liberated. Good, Kappa! Listen closely! Listen closely, and consider it well. I will explain this for you.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.4c26'>「劫波，當觀知諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切悉皆無常。 正觀無常已，色愛即除。 色愛除已，心善解脫。</td>
+    <td id='p4'>4. “Kappa, you should observe and know that whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all impermanent. Having correctly observed that they are impermanent, craving for forms is eliminated. Once craving for forms is eliminated, one’s mind is well liberated.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.5a1'>「如是觀受、想、行、識，若過去、若未來、若現在，若內、若外、若麁、若細，若好、若醜，若遠、若近，彼一切悉皆無常。 正觀無常已，識愛即除。 識愛除已，我說心善解脫。</td>
+    <td id='p5'>5. “In this way, observe whatever feelings … conceptions … volitions … instances of awareness there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all impermanent. Once one correctly observes that they are impermanent, craving for awareness is eliminated. Once craving for awareness is eliminated, I say one’s mind is well liberated.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.5a4'>「劫波，如是，比丘心善解脫者，如來說名心善解脫。 所以者何？ 愛欲斷故。 愛欲斷者，如來說名心善解脫。」</td>
+    <td id='p6'>6. “Kappa, when a monk’s mind is well liberated in this way, the Tathāgata says that this is called one’s mind being well liberated. Why is that? Because his craving for desires is stopped. When craving for desires is stopped, the Tathāgata teaches that this is called one’s mind being well liberated.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.5a7'>時，劫波比丘聞佛所說，心大歡喜。 禮佛而退。 爾時，劫波比丘受佛教已，獨一靜處，專精思惟，不放逸住。 ⋯乃至⋯「『自知不受後有。』」 心善解脫，成阿羅漢。</td>
+    <td id='p7'>7. When the monk Kappa heard what the Buddha taught, he felt great joy. He then bowed to the Buddha and withdrew. Once he had received the Buddha’s teaching, that monk Kappa went alone to a quiet place, focused on contemplation, and lived earnestly. … <em>Up to</em> … “‘I myself know that I won’t be subject to a later existence.’” His mind was well liberated, and he became an <em>arhat</em>.</td>
+  </tr>
+</table>
 
-2\. It was then that the monk Kappa[\[2\]](#n2){:#ref2} came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand at one side, and said to the Buddha, “The Bhagavān says ‘a monk’s mind becomes well liberated.’  Bhagavān, how does a monk’s mind become well liberated?”
-{:#p2}
+<hr/>
 
-3\. The Bhagavān told Kappa, “Good! It’s good that you can ask the Tathāgata about one’s mind being well liberated. Good, Kappa! Listen closely! Listen closely, and consider it well. I will explain this for you.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Kappa, you should observe and know that whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all impermanent. Having correctly observed that they are impermanent, craving for forms is eliminated. Once craving for forms is eliminated, one’s mind is well liberated.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 22 in the <cite>Taisho</cite> edition and no. 28 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0004c20" target="_blank">T99.2.4c20-5a10</a>). It’s a different version of <a href="https://suttacentral.net/sn22.124" target="_blank">SN 22.124-125</a>, where this monk appears in Pali <em>sutta</em>s. Cf. the <cite><a href="https://www.palikanon.com/english/pali_names/ka/kappa.htm" target="_blank">Buddhist Dictionary of Pali Proper Names</a></cite> for a summary of sources in which this character appears in Theravāda texts.[<a href="#ref1">back</a>]</li>
+<li id="n2"><em>Kappa</em>. C. 劫波 (EMC <em>kɪʌp-pua</em> = G. <em>kapa</em> or <em>kappa</em>), P. <em>kappa</em>, S. <em>*kalpa</em>. The C. translit. appears to approximate an Indic <em>-pp-</em>, which would match a Pr. rather than S. pronunciation, but I haven’t located an attestation in S. sources for this character. Presumably, it would have been Sanskritized to <em>kalpa</em>.[<a href="#ref2">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “In this way, observe whatever feelings … conceptions … volitions … consciousnesses there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all impermanent. Once one correctly observes that they are impermanent, craving for consciousnesses is eliminated. Once craving for consciousnesses is eliminated, I say one’s mind is well liberated.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 February 2024</p>
 
-6\. “Kappa, when a monk’s mind is well liberated in this way, the Tathāgata says that this is called one’s mind being well liberated. Why is that? Because his craving for desires is stopped. When craving for desires is stopped, the Tathāgata teaches that this is called one’s mind being well liberated.”
-{:#p6}
-
-7\. When the monk Kappa heard what the Buddha taught, he felt great joy. He then bowed to the Buddha and withdrew. Once he had received the Buddha’s teaching, that monk Kappa went alone to a quiet place, focused on contemplation, and lived earnestly. … <em>Up to</em> … “‘I myself know that I won’t be subject to a later existence.’” His mind was well liberated, and he became an <em>arhat</em>.
-{:#p7}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is a different version of <a href="https://suttacentral.net/sn22.124" target="_blank">SN 22.124-125</a>, where this monk appears in Pali <em>sutta</em>s. Cf. the <cite><a href="https://www.palikanon.com/english/pali_names/ka/kappa.htm" target="_blank">Buddhist Dictionary of Pali Proper Names</a></cite> for a summary of sources in which this character appears in Theravāda texts. [\[back\]](#ref1)
-2. {:#n2} <em>Kappa</em>. C. 劫波 (EMC <em>kɪʌp-pua</em> = G. <em>kapa</em> or <em>kappa</em>), P. <em>kappa</em>, S. <em>*kalpa</em>. The C. translit. appears to approximate an Indic <em>-pp-</em>, which would match a Pr. rather than S. pronunciation, but I haven’t located an attestation in S. sources for this character. Presumably, it would have been Sanskritized to <em>kalpa</em>. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 20 December 2023
-{: .revised}
-
----
+<hr/>
