--- a/01_agama/samyukta/01/SA1_37.md
+++ b/01_agama/samyukta/01/SA1_37.md
@@ -7,79 +7,101 @@ previous: SA1_36.html
 next: SA1_38.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 37 (31). Śroṇa (2)
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra was on Mount Gṛdhrakūṭa.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（三一） 輸屢那</th>
+  <th class='en'>37 (31). Śroṇa (2)</th>
+  <tr>
+    <td title='t99.2.6c4'>如是我聞：一時，佛住王舍城迦蘭陀竹園。爾時，尊者舍利弗在耆闍崛山。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra was on Mount Gṛdhrakūṭa.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c5'>時，有長者子名輸屢那，日日遊行。 到耆闍崛山，詣舍利弗所。 頭面禮足，却坐一面。</td>
+    <td id='p2'>2. There was then a prominent man’s son named Śroṇa who went for walks every day. He went to Mount Gṛdhrakūṭa and visited Venerable Śāriputra there. After bowing at his feet, Śroṇa withdrew to sit at one side.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c7'>時，舍利弗謂： 「輸屢那！若沙門、婆羅門於色不如實知，色集不如實知，色滅不如實知，色滅道跡不如實知故。 輸屢那！當知此沙門、婆羅門不堪能斷色。 如是沙門、婆羅門於受⋯想⋯行⋯識不如實知，識集不如實知，識滅不如實知，識滅道跡不如實知故，不堪能斷識。</td>
+    <td id='p3'>3. Śāriputra said, “Śroṇa, suppose ascetics or priests don’t truly know form, don’t truly know the formation of form, don’t truly know the cessation of form, and don’t truly know the path to the cessation of form. Śroṇa, you should know that these ascetics or priests aren’t capable of stopping form. In this way, suppose ascetics or priests don’t truly know feeling … conception … volition … awareness, don’t truly know the formation of awareness, don’t truly know the cessation of awareness, and don’t truly know the path to the cessation of awareness. [Śroṇa, you should know that these ascetics or priests] aren’t capable of stopping awareness.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c13'>「輸屢那！若沙門、婆羅門於色如實知，色集如實知，色滅如實知，色滅道跡如實知故。 輸屢那！當知此沙門、婆羅門堪能斷色。 如是，輸屢那！若沙門、婆羅門於受、想、行、識如實知，識集如實知，識滅如實知，識滅道跡如實知故。 輸屢那！當知此沙門、婆羅門堪能斷識。</td>
+    <td id='p4'>4. “Śroṇa, suppose ascetics or priests do truly know form, truly know the formation of form, truly know the cessation of form, and truly know the path to the cessation of form. Therefore, Śroṇa, you should know that these ascetics or priests are capable of stopping form. In this way, Śroṇa, suppose ascetics or priests do truly know feeling … conception … volition … awareness, do truly know the formation of awareness, truly know the cessation of awareness, and truly know the path to the cessation of awareness. Śroṇa, you should know that these ascetics or priests are capable of stopping awareness.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c20'>「輸屢那，於意云何？ 色為常、為無常耶？」</td>
+    <td id='p5'>5. “Śroṇa, what do you think? Is form permanent or impermanent?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c21'>答言： 「無常。」</td>
+    <td>He replied, “Impermanent.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c21'>又問： 「若無常者，是苦耶？」</td>
+    <td id='p6'>6. Śāriputra asked, “If something is impermanent, is that painful?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c21'>答言： 「是苦。」</td>
+    <td>He replied, “It’s painful.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c22'>舍利弗言： 「若色無常、苦者，是變易法。 聖弟子寧於中見色是我、異我、相在不？」</td>
+    <td id='p7'>7. Śāriputra asked, “If form is impermanent and painful, it’s subject to change. Would a noble disciple see form as self, different than self, or either being present in the other?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c23'>答言： 「不也。」</td>
+    <td>He replied, “No.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c24'>「輸屢那！如是受⋯想⋯行⋯識為常、為無常耶？」</td>
+    <td id='p8'>8. “Śroṇa, in this way, is feeling … conception … volition … awareness permanent or impermanent?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c25'>答言： 「無常。」</td>
+    <td>He replied, “Impermanent.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c25'>又問： 「若無常者，是苦耶？」</td>
+    <td id='p9'>9. He further asked, “If something is impermanent, is it painful?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c25'>答言： 「是苦。」</td>
+    <td>He replied, “It’s painful.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c26'>又問： 「若無常、苦者，是變易法。 聖弟子寧於中見識是我、異我、相在不？」</td>
+    <td id='p10'>10. Śāriputra asked, “If [awareness] is impermanent and painful, then it’s subject to change. Would a noble disciple see awareness as self, different than self, or either being present in the other?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c27'>答曰： 「不也。」</td>
+    <td>He replied, “No.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.6c28'>「輸屢那！當知色，若過去、若未來、若現在，若內、若外，若麁、若細、若好、若醜，若遠、若近，於一切色不是我、不異我、不相在。 是名如實知。 輸屢那！聖弟子於色生厭、離欲、解脫，解脫生、老、病、死、憂、悲、苦、惱。</td>
+    <td id='p11'>11. “Śroṇa, you should know that whether forms are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those forms are not self, not different than self, and neither is present in the other. This is called truly knowing them. Śroṇa, a noble disciple who becomes disillusioned with form, becomes free of desire for it, and is liberated from it is freed from birth, old age, illness, death, sorrow, lamentation, pain, and trouble.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a3'>「如是受⋯想⋯行⋯識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切識不是我、不異我、不相在。 是名如實知。 輸屢那！聖弟子於識生厭、離欲、解脫，解脫生、老、病、死、憂、悲、苦、惱。」</td>
+    <td id='p12'>12. “Thus, whether feelings … conceptions … volitions … instances of awareness are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those instances of awareness are not self, not different than self, and neither is present in the other. This is called truly knowing them. Śroṇa, a noble disciple who becomes disillusioned with awareness, becomes free of desire for it, and is liberated from it is freed from birth, old age, illness, death, sorrow, lamentation, pain, and trouble.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a8'>時，輸屢那聞舍利弗所說，歡喜踊躍，作禮已，去。</td>
+    <td id='p13'>13. When Śroṇa heard what Śāriputra taught, he rejoiced and celebrated. He then bowed and departed.</td>
+  </tr>
+</table>
 
-2\. There was then a prominent man’s son named Śroṇa who went for walks every day. He went to Mount Gṛdhrakūṭa and visited Venerable Śāriputra there. After bowing at his feet, Śroṇa withdrew to sit at one side.
-{:#p2}
+<hr/>
 
-3\. Śāriputra said, “Śroṇa, suppose ascetics or priests don’t truly know form, don’t truly know the formation of form, don’t truly know the cessation of form, and don’t truly know the path to the cessation of form. Śroṇa, you should know that these ascetics or priests aren’t capable of stopping form. In this way, suppose ascetics or priests don’t truly know feeling … conception … volition … consciousess, don’t truly know the formation of consciousness, don’t truly know the cessation of consciousness, and don’t truly know the path to the cessation of consciousness. [Śroṇa, you should know that these ascetics or priests] aren’t capable of stopping consciousness.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Śroṇa, suppose ascetics or priests do truly know form, truly know the formation of form, truly know the cessation of form, and truly know the path to the cessation of form. Therefore, Śroṇa, you should know that these ascetics or priests are capable of stopping form. In this way, Śroṇa, suppose ascetics or priests do truly know feeling … conception … volition … consciousess, do truly know the formation of consciousness, truly know the cessation of consciousness, and truly know the path to the cessation of consciousness. Śroṇa, you should know that these ascetics or priests are capable of stopping consciousness.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 31 in the <cite>Taisho</cite> edition and no. 37 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0006c04" target="_blank">T99.2.6c4-7a9</a>). It’s parallel to <a href="https://suttacentral.net/sn22.50" target="_blank">SN 22.50</a> and a Sanskrit fragment (<a href="https://suttacentral.net/sf90/san/vallee" target="_blank">SF 90</a>). The discourse presented here is taught by Śāriputra rather than the Buddha. It shares the same analysis of the five aggregates (knowing them and their formation, cessation, and path to cessation), but not the conclusion found in SN 22.50. The Pali <em>sutta</em> omits the repetition of the argument that begins at §5.<br/>
+SF90 is nearly identical to this <em>sūtra</em>, but it says that ascetics and priests either badly or skillfully understand the aggregates, not that they are capable or not of stopping them. Most of the concluding argument is lost in the fragment, too, but it wasn’t omitted like it was in SN.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Śroṇa, what do you think? Is form permanent or impermanent?”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 1 March 2024</p>
 
-He replied, “Impermanent.”
-
-
-6\. Śāriputra asked, “If something is impermanent, is that painful?”
-{:#p6}
-
-He replied, “It’s painful.”
-
-
-7\. Śāriputra asked, “If form is impermanent and painful, it’s subject to change. Would a noble disciple see form as self, different than self, or either being present in the other?”
-{:#p7}
-
-He replied, “No.”
-
-
-8\. “Śroṇa, in this way, is feeling … conception … volition … consciousess permanent or impermanent?”
-{:#p8}
-
-He replied, “Impermanent.”
-
-
-9\. He further asked, “If something is impermanent, is it painful?”
-{:#p9}
-
-He replied, “It’s painful.”
-
-
-10\. Śāriputra asked, “If [consciousness] is impermanent and painful, then it’s subject to change. Would a noble disciple see consciousness as self, different than self, or either being present in the other?”
-{:#p10}
-
-He replied, “No.”
-
-
-11\. “Śroṇa, you should know that whether forms are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those forms are not self, not different than self, and neither is present in the other. This is called truly knowing them. Śroṇa, a noble disciple who becomes disillusioned with form, becomes free of desire for it, and is liberated from it is freed from birth, old age, illness, death, sorrow, lamentation, pain, and trouble.
-{:#p11}
-
-12\. “Thus, whether feelings … conceptions … volitions … consciousnesses are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those consciousnesses are not self, not different than self, and neither is present in the other. This is called truly knowing them. Śroṇa, a noble disciple who becomes disillusioned with consciousness, becomes free of desire for it, and is liberated from it is freed from birth, old age, illness, death, sorrow, lamentation, pain, and trouble.”
-{:#p12}
-
-13\. When Śroṇa heard what Śāriputra taught, he rejoiced and celebrated. He then bowed and departed.
-{:#p13}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.50" target="_blank">SN 22.50</a> and a Sanskrit fragment, <a href="https://suttacentral.net/sf90/san/vallee" target="_blank">SF 90</a>. The discourse presented here is taught by Śāriputra rather than the Buddha. It shares the same analysis of the five aggregates (knowing them and their formation, cessation, and path to cessation), but not the conclusion found in SN 22.50. The Pali <em>sutta</em> omits the repetition of the argument that begins at §5.<br/>
-SF90 is nearly identical to this <em>sūtra</em>, but it says that ascetics and priests either badly and skillfully understand the aggregates, not that they are capable or not of stopping them. Most of the concluding argument is lost in the fragment, too, but it wasn’t omitted like it was in SN. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 December 2023
-{: .revised}
-
----
+<hr/>
