--- a/01_agama/samyukta/01/SA1_38.md
+++ b/01_agama/samyukta/01/SA1_38.md
@@ -7,82 +7,105 @@ previous: SA1_37.html
 next: SA1_39.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 38 (32). Śroṇa (3)
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra was on Mount Gṛdhrakūṭa.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（三二） 輸屢那</th>
+  <th class='en'>38 (32). Śroṇa (3)</th>
+  <tr>
+    <td title='t99.2.7a10'>如是我聞： 一時，佛住王舍城迦蘭陀竹園。 爾時，尊者舍利弗在耆闍崛山。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra was on Mount Gṛdhrakūṭa.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a11'>時，有長者子名輸屢那，日日遊行，到耆闍崛山，詣舍利弗所，頭面禮足，却坐一面。</td>
+    <td id='p2'>2. There was then a prominent man’s son named Śroṇa who went for walks every day. He went to Mount Gṛdhrakūṭa and visited Venerable Śāriputra there. After bowing at his feet, Śroṇa withdrew to sit at one side.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a13'>時，舍利弗告輸屢那： 「若沙門、婆羅門於色不如實知，色集不如實知，色滅不如實知，色味不如實知，色患不如實知，色離不如實知故，不堪能超越色。 若沙門、婆羅門於受、想、行、識不如實知，識集不如實知，識滅不如實知，識味不如實知，識患不如實知，識離不如實知故，此沙門、婆羅門不堪能超越識。</td>
+    <td id='p3'>3. Śāriputra said to Śroṇa, “Suppose ascetics or priests don’t truly know form, don’t truly know the formation of form, don’t truly know the cessation of form, don’t truly know the enjoyment of form, don’t truly know the trouble of form, and don’t truly know the escape from form. [Śroṇa, you should know that these ascetics or priests] aren’t capable of going beyond form. Suppose ascetics or priests don’t truly know feeling … conception … volition … awareness, don’t truly know the formation of awareness, don’t truly know the cessation of awareness, don’t truly know the enjoyment of awareness, don’t truly know the trouble of awareness, and don’t truly know the escape from awareness. These ascetics or priests aren’t capable of going beyond awareness.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a20'>「若沙門、婆羅門於色、色集、色滅、色味、色患、色離如實知，此沙門、婆羅門堪能超越色。 若沙門、婆羅門於受、想、行、識、識集、識滅、識味、識患、識離如實知，此沙門、婆羅門堪能超越識。</td>
+    <td id='p4'>4. “Suppose ascetics or priests do truly know form … the formation of form … the cessation of form … the enjoyment of form … the trouble of form … the escape from form. These ascetics or priests are capable of going beyond form. Suppose ascetics or priests do truly know feeling … conception … volition … awareness … the formation of awareness … the cessation of awareness … the enjoyment of awareness … the trouble of awareness … the escape from awareness. These ascetics or priests are capable of going beyond awareness.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a24'>「輸屢那！於汝意云何？ 色為常、為無常耶？」</td>
+    <td id='p5'>5. “Śroṇa, what do you think? Is form permanent or impermanent?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a25'>答言： 「無常。」</td>
+    <td>He replied, “Impermanent.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a26'>「無常者，為苦耶？」</td>
+    <td id='p6'>6. “If something is impermanent, is that painful?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a26'>答言： 「是苦。」</td>
+    <td>He replied, “It’s painful.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a26'>「輸屢那！若色無常、苦，是變易法，聖弟子於中寧有是我、異我、相在不？」</td>
+    <td id='p7'>7. “Śroṇa, if form is impermanent and painful, it’s subject to change. Would a noble disciple see form as self, different than self, or either being present in the other?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a28'>答言： 「不也。」</td>
+    <td>He replied, “No.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a28'>「輸屢那！於汝意云何？ 如是受、想、行、識為常、為無常？」</td>
+    <td id='p8'>8. “Śroṇa is feeling … conception … volition … awareness permanent or impermanent?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7a29'>答言： 「無常。」</td>
+    <td>He replied, “Impermanent.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b1'>「若無常者，是苦耶？」</td>
+    <td id='p9'>9. “If something is impermanent, is it painful?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b1'>答言： 「是苦。」</td>
+    <td>He replied, “It’s painful.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b1'>「輸屢那！若無常、苦，是變易法，聖弟子於中寧有是我、異我、相在不？」</td>
+    <td id='p10'>10. “If [awareness] is impermanent and painful, then it’s subject to change. Would a noble disciple see awareness as self, different than self, or either being present in the other?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b1'>答言： 「不也。」</td>
+    <td>He replied, “No.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b3'>「輸屢那！當知色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，於一切色不是我、不異我、不相在，是名如實知。</td>
+    <td id='p11'>11. “Śroṇa, you should know that whether forms are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those forms are not self, not different than self, and neither is present in the other. This is called truly knowing it.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b6'>「輸屢那！受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，於一切識不是我、不異我、不相在，是名如實知。</td>
+    <td id='p12'>12. “Śroṇa, whether feelings … conceptions … volitions … instances of awareness are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those instances of awareness are not self, not different than self, and neither is present in the other. This is called truly knowing it.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b10'>「輸屢那！聖弟子於此五受陰正觀非我、非我所。 如是正觀，於諸世間無所攝受。 無攝受者，則無所著；無所著者，自得涅槃： 『我生已盡，梵行已立，所作已作，自知不受後有。』」</td>
+    <td id='p13'>13. “Śroṇa, a noble disciple correctly observes these five acquired aggregates as not self and not belonging to self. Correctly observing them in this way, they gather nothing from the world. Gathering nothing, they aren’t attached to anything. Not being attached to anything, they attain <em>nirvāṇa</em> for themselves: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to another existence.’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b14'>時，長者子輸屢那聞舍利弗所說，歡喜踊躍，作禮而去。</td>
+    <td id='p14'>14. When Śroṇa heard what Śāriputra taught, he rejoiced and celebrated. He then bowed and departed.</td>
+  </tr>
+</table>
 
-2\. There was then a prominent man’s son named Śroṇa who went for walks every day. He went to Mount Gṛdhrakūṭa and visited Venerable Śāriputra there. After bowing at his feet, Śroṇa withdrew to sit at one side.
-{:#p2}
+<hr/>
 
-3\. Śāriputra said to Śroṇa, “Suppose ascetics or priests don’t truly know form, don’t truly know the formation of form, don’t truly know the cessation of form, don’t truly know the enjoyment of form, don’t truly know the trouble of form, and don’t truly know the escape from form. [Śroṇa, you should know that these ascetics or priests] aren’t capable of going beyond form. Suppose ascetics or priests don’t truly know feeling … conception … volition … consciousess, don’t truly know the formation of consciousness, don’t truly know the cessation of consciousness, don’t truly know the enjoyment of consciousness, don’t truly know the trouble of consciousness, and don’t truly know the escape from consciousness. These ascetics or priests aren’t capable of going beyond consciousness.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “Suppose ascetics or priests do truly know form … the formation of form … the cessation of form … the enjoyment of form … the trouble of form … the escape from form. These ascetics or priests are capable of going beyond form. Suppose ascetics or priests do truly know feeling … conception … volition … consciousess … the formation of consciousness … the cessation of consciousness … the enjoyment of consciousness … the trouble of consciousness … the escape from consciousness. These ascetics or priests are capable of going beyond consciousness.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 32 in the <cite>Taisho</cite> edition and no. 38 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0007a10" target="_blank">T99.2.7a10-b15</a>). It’s a second variant of <a href="SA1_36.html" target="_blank">SĀ 1.36</a>. It’s closest parallels are <a href="https://suttacentral.net/sn22.50" target="_blank">SN 22.50</a> and a Sanskrit fragment (<a href="https://suttacentral.net/sf90/san/vallee" target="_blank">SF 90</a>).<br/>
+The discourse presented here is taught by Śāriputra rather than the Buddha (which is the case in SN). It expands the analysis of the aggregates found in <a href="SA1_37.html" target="_blank">SĀ 1.37</a> by adding their enjoyment, trouble, and escape in place of the path to their cessation. It also changes the conclusion slightly to say ascetics and priests are capable or not of going beyond the aggregates. The remainder follows the template found in the previous two <em>sūtra</em>s until the end, where there’s a different description of a noble disciple’s liberation. This <em>sūtra</em> matches the S. fragment SF90 better than it does SN 22.50.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Śroṇa, what do you think? Is form permanent or impermanent?”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 1 March 2024</p>
 
-He replied, “Impermanent.”
-
-
-6\. “If something is impermanent, is that painful?”
-{:#p6}
-
-He replied, “It’s painful.”
-
-
-7\. “Śroṇa, if form is impermanent and painful, it’s subject to change. Would a noble disciple see form as self, different than self, or either being present in the other?”
-{:#p7}
-
-He replied, “No.”
-
-
-8\. “Śroṇa is feeling … conception … volition … consciousess permanent or impermanent?”
-{:#p8}
-
-He replied, “Impermanent.”
-
-
-9\. “If something is impermanent, is it painful?”
-{:#p9}
-
-He replied, “It’s painful.”
-
-
-10\. “If [consciousness] is impermanent and painful, then it’s subject to change. Would a noble disciple see consciousness as self, different than self, or either being present in the other?”
-{:#p10}
-
-He replied, “No.”
-
-
-11\. “Śroṇa, you should know that whether forms are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those forms are not self, not different than self, and neither is present in the other. This is called truly knowing it.
-{:#p11}
-
-12\. “Śroṇa, whether feelings … conceptions … volitions … consciousesses are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, all those consciousnesses are not self, not different than self, and neither is present in the other. This is called truly knowing it.
-{:#p12}
-
-13\. “Śroṇa, a noble disciple correctly observes these five acquired aggregates as not self and not belonging to self. Correctly observing them in this way, they gather nothing from the world. Gathering nothing, they aren’t attached to anything. Not being attached to anything, they attain Nirvāṇa for themselves: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to another existence.’”
-{:#p13}
-
-14\. When Śroṇa heard what Śāriputra taught, he rejoiced and celebrated. He then bowed and departed.
-{:#p14}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is a second variant of <a href="SA1_36.html" target="_blank">SĀ 1.36</a>. It’s closest parallels are <a href="https://suttacentral.net/sn22.50" target="_blank">SN 22.50</a> and a Sanskrit fragment, <a href="https://suttacentral.net/sf90/san/vallee" target="_blank">SF 90</a>.<br/>
-The discourse presented here is taught by Śāriputra rather than the Buddha (which is the case in SN). It expands the analysis of the aggregates found in <a href="SA1_37.html" target="_blank">SĀ 1.37</a> by adding their enjoyment, trouble, and escape in place of the path to their cessation. It also changes the conclusion slightly to say ascetics and priests are capable or not of going beyond the aggregates. The remainder follows the template found in the previous two <em>sūtra</em>s until the end, where there’s a different description of a noble disciple’s liberation. This <em>sūtra</em> matches the S. fragment SF90 better than it does SN 22.50. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 December 2023
-{: .revised}
-
----
+<hr/>
