--- a/01_agama/samyukta/01/SA1_40.md
+++ b/01_agama/samyukta/01/SA1_40.md
@@ -7,60 +7,76 @@ previous: SA1_39.html
 next: SA1_41.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 40 (257). Ignorance (2)
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra and Venerable Mahākauṣṭhila were on Mount Gṛdhrakūṭa.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（二五七） 無明</th>
+  <th class='en'>40 (257). Ignorance (2)</th>
+  <tr>
+    <td title='t99.2.64c20'>如是我聞： 一時，佛住王舍城迦蘭陀竹園。 時，尊者舍利弗、尊者摩訶拘絺羅在耆闍崛山。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra and Venerable Mahākauṣṭhila were on Mount Gṛdhrakūṭa.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.64c22'>時，摩訶拘絺羅晡時從禪起，詣尊者舍利弗所，共相問訊，種種相娛悅已，却坐一面。</td>
+    <td id='p2'>2. Venerable Mahākauṣṭhila rose from meditation in the afternoon and visited Śāriputra. Once they had exchanged greetings and joked in various ways, he withdrew to sit to one side.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.64c24'>時，尊者摩訶拘絺羅語舍利弗言：「欲有所問，寧有少暇為我說不？」</td>
+    <td id='p3'>3. Venerable Mahākauṣṭhila said to Śāriputra, “I have a question I’d like to ask if you might have some time to explain it for me?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.64c25'>舍利弗言：「仁者且問，知者當說。」</td>
+    <td>Śāriputra said, “Go ahead with your question, sir. I will tell you what I know.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.64c26'>摩訶拘絺羅問舍利弗言：「所謂無明，復云何為無明？誰有此無明？」</td>
+    <td id='p4'>4. Venerable Mahākauṣṭhila said to Śāriputra, “There’s the term ‘ignorance.’ What is ignorance? Who possesses this ignorance?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.64c28'>舍利弗答言：「無明者謂不知，不知者是無明。」</td>
+    <td>Śāriputra replied, “Ignorance means to not know. Someone who doesn’t know is ignorant.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.64c29'>「何所不知？」</td>
+    <td id='p5'>5. “What is it that they don’t know?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.64c29'>「謂色不如實知，色集、色滅、色滅道跡不如實知。受、想、行、識不如實知，識集、識滅、識滅道跡不如實知。摩訶拘絺羅！於此五受陰不如實知、不知、不見、不無間等、愚、闇、不明，是名無明，成就此者，名有無明。」</td>
+    <td id='p6'>6. “They don’t truly know form … the formation of form … the cessation of form, and don’t truly know the path to form’s cessation. They don’t truly know feeling … conception … volition … awareness … the formation of awareness … the cessation of awareness, and don’t truly know the path to awareness’ cessation. Mahākauṣṭhila, they don’t truly know these five acquired aggregates. They don’t see and have no direct realization of them. They are foolish, benighted, and aren’t insightful. This is called ignorance. Someone who achieves this is called ignorant.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a5'>又問：「舍利弗云何為明？誰有此明？」</td>
+    <td id='p7'>7. Mahākauṣṭhila also asked, “Śāriputra, [there’s that term ‘insight.’] What is insight? Who possesses this insight?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a6'>舍利弗言：「所謂明者是知，知者是明。」</td>
+    <td>Śāriputra said, “[Mahākauṣṭhila,] the term insight means to know. Someone who knows is called insightful.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a7'>又問：「何所知？」</td>
+    <td id='p8'>8. Mahākauṣṭhila asked, “What is it that they know?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a7'>舍利弗言：「色如實知，色集、色滅、色滅道跡如實知。受、想、行、識如實知，識集、識滅、識滅道跡如實知。拘絺羅！於此五受陰如實知、見、明、覺、慧、無間等，是名為明，成就此法者，是名有明。」</td>
+    <td id='p9'>9. Śāriputra said, “They truly know form … the formation of form … the cessation of form, and truly know the path to form’s cessation. They truly know feeling … conception … volition … awareness … the formation of awareness … the cessation of awareness, and truly know the path to awareness’ cessation. Mahākauṣṭhila, they truly know these five acquired aggregates. They see and have insight about them. They are aware, wise, and directly realize it. This is called insight. Someone who achieves this is called insightful.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a11'>是二正士各聞所說，展轉隨喜，從坐而起，各還本處。</td>
+    <td id='p10'>10. Those two proper gentlemen each heard that teaching and were in turn delighted by it. They rose from their seats, and each returned to his home.</td>
+  </tr>
+</table>
 
-2\. Venerable Mahākauṣṭhila rose from meditation in the afternoon and visited Śāriputra. Once they had exchanged greetings and joked in various ways, he withdrew to sit to one side.
-{:#p2}
+<hr/>
 
-3\. Venerable Mahākauṣṭhila said to Śāriputra, “I have a question I’d like to ask if you might have some time to explain it for me?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-Śāriputra said, “Go ahead with your question, sir. I will tell you what I know.”
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 257 in the <cite>Taisho</cite> edition and no. 40 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0064c20" target="_blank">T99.2.64c20-65a12</a>). It’s the second of three <em>sūtra</em>s that correspond to <a href="https://suttacentral.net/sn22.129" target="_blank">SN 22.129-135</a>. Their closest parallels are <a href="https://suttacentral.net/sn22.133" target="_blank">SN 22.133-135</a>, which combine the definition of ignorance and insight into a single discourse. This particular <em>sūtra</em> is closest to <a href="https://suttacentral.net/sn22.135" target="_blank">SN 22.135</a>.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 1 March 2024</p>
 
-4\. Venerable Mahākauṣṭhila said to Śāriputra, “There’s the term ‘ignorance.’ What is ignorance? Who possesses this ignorance?”
-{:#p4}
-
-Śāriputra replied, “Ignorance means to not know. Someone who doesn’t know is ignorant.”
-
-
-5\. “What is it that they don’t know?”
-{:#p5}
-
-6\. “They don’t truly know form … the formation of form … the cessation of form, and don’t truly know the path to form’s cessation. They don’t truly know feeling … conception … volition … consciousness … the formation of consciousness … the cessation of consciousness, and don’t truly know the path to consciousness’ cessation. Mahākauṣṭhila, they don’t truly know these five acquired aggregates. They don’t see and have no direct realization of them. They are foolish, benighted, and aren’t insightful. This is called ignorance. Someone who achieves this is called ignorant.”
-{:#p6}
-
-7\. Mahākauṣṭhila also asked, “Śāriputra, [there’s that term ‘insight.’] What is insight? Who possesses this insight?”
-{:#p7}
-
-Śāriputra said, “[Mahākauṣṭhila,] the term insight means to know. Someone who knows is called insightful.”
-
-
-8\. Mahākauṣṭhila asked, “What is it that they know?”
-{:#p8}
-
-9\. Śāriputra said, “They truly know form … the formation of form … the cessation of form, and truly know the path to form’s cessation. They truly know feeling … conception … volition … consciousness … the formation of consciousness … the cessation of consciousness, and truly know the path to consciousness’ cessation. Mahākauṣṭhila, they truly know these five acquired aggregates. They see and have insight about them.^They are aware, wise, and directly realize it. This is called insight. Someone who achieves this is called insightful.”
-{:#p9}
-
-10\. Those two proper gentlemen each heard that teaching and were in turn delighted by it. They rose from their seats, and each returned to his home.
-{:#p10}
-
----
-
-### Notes
-
-1. {:#n1} This is the second of three <em>sūtra</em>s that correspond to <a href="https://suttacentral.net/sn22.129" target="_blank">SN 22.129-135</a>. Their closest parallels are <a href="https://suttacentral.net/sn22.133" target="_blank">SN 22.133-135</a>, which combine the definition of ignorance and insight into a single discourse. This particular <em>sūtra</em> is closest to <a href="https://suttacentral.net/sn22.135" target="_blank">SN 22.135</a>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 December 2023
-{: .revised}
-
----
+<hr/>
