--- a/01_agama/samyukta/01/SA1_41.md
+++ b/01_agama/samyukta/01/SA1_41.md
@@ -7,60 +7,77 @@ previous: SA1_40.html
 next: SA1_42.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 41 (258). Ignorance (3)
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra and Venerable Mahākauṣṭhila were on Mount Gṛdhrakūṭa.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（二五八） 無明</th>
+  <th class='en'>41 (258). Ignorance (3)</th>
+  <tr>
+    <td title='t99.2.65a13'>如是我聞：一時，佛住王舍城迦蘭陀竹園。爾時，尊者舍利弗、尊者摩訶拘絺羅在耆闍崛山。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra and Venerable Mahākauṣṭhila were on Mount Gṛdhrakūṭa.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a15'>時，摩訶拘絺羅晡時從禪起，詣舍利弗所，共相問訊，相娛悅已，却坐一面。</td>
+    <td id='p2'>2. Venerable Mahākauṣṭhila rose from meditation in the afternoon and visited Śāriputra. Once they had exchanged greetings and joked in various ways, he withdrew to sit to one side.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a17'>時，摩訶拘絺羅語舍利弗：「欲有所問，仁者寧有閑暇見答以不？」</td>
+    <td id='p3'>3. Venerable Mahākauṣṭhila said to Śāriputra, “I have a question I’d like to ask if you might have some time to explain it for me?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a18'>舍利弗言：「仁者且問，知者當答。」</td>
+    <td>Śāriputra said, “Go ahead with your question, sir. I will tell you what I know.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a19'>時，摩訶拘絺羅語舍利弗言：「所謂無明，無明者為何謂耶？誰有此無明？」</td>
+    <td id='p4'>4. Venerable Mahākauṣṭhila asked Śāriputra, “There’s the term ‘ignorance.’ What is this ignorance? Who possesses this ignorance?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a21'>舍利弗言：「不知，是無明。」</td>
+    <td>Śāriputra replied, “To not know is ignorance. [Someone who doesn’t know is ignorant.]”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a21'>「不知何等？」</td>
+    <td id='p5'>5. “What don’t they know?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a21'>
+「謂色不如實知，色集、色滅、色味、色患、色離不如實知。受、想、行、識，識集、識滅、識味、識患、識離不如實知。摩訶拘絺羅，於此五受陰不如實知、不如實見、不無間等、若闇、若愚，是名無明，成就此法者，名有無明。」</td>
+    <td id='p6'>6. “They don’t truly know form … the formation of form … the cessation of form … the enjoyment of form … the trouble of form, and they don’t truly know the escape from form. They don’t truly know feeling … conception … volition … awareness … the formation of awareness … the cessation of awareness … the enjoyment of awareness … the trouble of awareness, and they don’t truly know the escape from awareness. Mahākauṣṭhila, they truly don’t know these five acquired aggregates. They don’t truly see and have no direct realization of them. They are benighted, foolish, [and aren’t insightful.] This is called ignorance. Someone who achieves this is called ignorant.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a27'>又問：「明者。云何為明？誰有此明？」</td>
+    <td id='p7'>7. Mahākauṣṭhila also asked, “Śāriputra, what is insight? Who possesses this insight?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a27'>舍利弗言：「知者是明。」</td>
+    <td>Śāriputra said, “[Mahākauṣṭhila, the term insight means to know.] Someone who knows is called insightful.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a27'>「為何所知？」</td>
+    <td id='p8'>8. “What is it that they know?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65a28'>舍利弗言： 「色如實知， 色集、色滅、色味、色患、色[2]離如實知。 [3]如是受、想、行、識如實知， 識集、識滅、識味、識患、識離如實知。摩訶拘絺羅！於此五受陰如實知、如實見、明、覺、慧、無間等，是名為明，成就此者，名為有明。」</td>
+    <td id='p9'>9. Śāriputra said, “They truly know form … the formation of form … the cessation of form … the enjoyment of form … the trouble of form, and they truly know the escape from form. They truly know feeling … conception … volition … awareness … the formation of awareness … the cessation of awareness … the enjoyment of awareness … the trouble of awareness, and they truly know the escape from awareness. Mahākauṣṭhila, they truly know these five acquired aggregates. They truly see and have insight about them. They are aware, wise, and directly realize it. This is called insight. Someone who achieves this is called insightful.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.65b3'>時，二正士各聞所說，歡喜而去。</td>
+    <td id='p10'>10. When those two proper gentlemen each heard that teaching, they rejoiced and departed.</td>
+  </tr>
+</table>
 
-2\. Venerable Mahākauṣṭhila rose from meditation in the afternoon and visited Śāriputra. Once they had exchanged greetings and joked in various ways, he withdrew to sit to one side.
-{:#p2}
+<hr/>
 
-3\. Venerable Mahākauṣṭhila said to Śāriputra, “I have a question I’d like to ask if you might have some time to explain it for me?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-Śāriputra said, “Go ahead with your question, sir. I will tell you what I know.”
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 258 in the <cite>Taisho</cite> edition and no. 41 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0065a13" target="_blank">T99.2.65a13-b4</a>). It and the previous <em>sūtra</em> are variants of <a href="SA1_39.html" target="_blank">SĀ 1.39</a>. All three correspond generally to <a href="https://suttacentral.net/sn22.129" target="_blank">SN 22.129-135</a>. This <em>sūtra</em> is closest to <a href="https://suttacentral.net/sn22.134" target="_blank">SN 22.134</a>.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 1 March 2024</p>
 
-4\. Venerable Mahākauṣṭhila asked Śāriputra, “There’s the term ‘ignorance.’ What is this ignorance? Who possesses this ignorance?”
-{:#p4}
-
-Śāriputra replied, “To not know is ignorance. [Someone who doesn’t know is ignorant.]”
-
-
-5\. “What don’t they know?”
-{:#p5}
-
-6\. “They don’t truly know form … the formation of form … the cessation of form … the enjoyment of form … the trouble of form, and they don’t truly know the escape from form. They don’t truly know feeling … conception … volition … consciousness … the formation of consciousness … the cessation of consciousness … the enjoyment of consciousness … the trouble of consciousness, and they don’t truly know the escape from consciousness. Mahākauṣṭhila, they truly don’t know these five acquired aggregates. They don’t truly see and have no direct realization of them. They are benighted, foolish, [and aren’t insightful.] This is called ignorance. Someone who achieves this is called ignorant.”
-{:#p6}
-
-7\. Mahākauṣṭhila also asked, “Śāriputra, what is insight? Who possesses this insight?”
-{:#p7}
-
-Śāriputra said, “[Mahākauṣṭhila, the term insight means to know.] Someone who knows is called insightful.”
-
-
-8\. “What is it that they know?”
-{:#p8}
-
-9\. Śāriputra said, “They truly know form … the formation of form … the cessation of form … the enjoyment of form … the trouble of form, and they truly know the escape from form. They truly know feeling … conception … volition … consciousness … the formation of consciousness … the cessation of consciousness … the enjoyment of consciousness … the trouble of consciousness, and they truly know the escape from consciousness. Mahākauṣṭhila, they truly know these five acquired aggregates. They truly see and have insight about them. They are aware, wise, and directly realize it. This is called insight. Someone who achieves this is called insightful.”
-{:#p9}
-
-10\. When those two proper gentlemen each heard that teaching, they rejoiced and departed.
-{:#p10}
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> and the previous one are variants of <a href="SA1_39.html" target="_blank">SĀ 1.39</a>. All three correspond generally to <a href="https://suttacentral.net/sn22.129" target="_blank">SN 22.129-135</a>. This <em>sūtra</em> is parallel to <a href="https://suttacentral.net/sn22.134" target="_blank">SN 22.134</a>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 30 December 2023
-{: .revised}
-
----
+<hr/>
